<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="clear_expression">CE</string>
    <string name="clear">C</string>
    <string name="backspace">&#x232B;</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">&#215;</string>
    <string name="obelus">&#247;</string>
    <string name="dot">.</string>
    <string name="plus_minus">&#177;</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>
