<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="horizontal"
        android:background="@color/colorOutput">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/operationView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:autoSizeTextType="uniform"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prevNumberView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/numberView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:autoSizeTextType="uniform"
                android:text="@string/zero"
                android:textAlignment="textEnd" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_operator"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="30sp"
                android:text="@string/clear_expression"
                android:onClick="onClearExpressionClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_operator"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="30sp"
                android:text="@string/clear"
                android:onClick="onClearClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_operator"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="30sp"
                android:text="@string/backspace"
                android:onClick="onBackspaceClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_operator"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="30sp"
                android:text="@string/obelus"
                android:onClick="onObelusClick"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="45sp"
                android:background="@drawable/button_numpad"
                android:text="@string/one"
                android:onClick="onOneClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="45sp"
                android:background="@drawable/button_numpad"
                android:text="@string/two"
                android:onClick="onTwoClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="45sp"
                android:background="@drawable/button_numpad"
                android:text="@string/three"
                android:onClick="onThreeClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="30sp"
                android:background="@drawable/button_operator"
                android:text="@string/multiply"
                android:onClick="onMultiplyClick"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="45sp"
                android:background="@drawable/button_numpad"
                android:text="@string/four"
                android:onClick="onFourClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="45sp"
                android:background="@drawable/button_numpad"
                android:text="@string/five"
                android:onClick="onFiveClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="45sp"
                android:background="@drawable/button_numpad"
                android:text="@string/six"
                android:onClick="onSixClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="30sp"
                android:background="@drawable/button_operator"
                android:text="@string/minus"
                android:onClick="onMinusClick"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="45sp"
                android:background="@drawable/button_numpad"
                android:text="@string/seven"
                android:onClick="onSevenClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="45sp"
                android:background="@drawable/button_numpad"
                android:text="@string/eight"
                android:onClick="onEightClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="45sp"
                android:background="@drawable/button_numpad"
                android:text="@string/nine"
                android:onClick="onNineClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="30sp"
                android:background="@drawable/button_operator"
                android:text="@string/plus"
                android:onClick="onPlusClick"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="30sp"
                android:background="@drawable/button_operator"
                android:text="@string/plus_minus"
                android:onClick="onPlusMinusClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="45sp"
                android:background="@drawable/button_numpad"
                android:text="@string/zero"
                android:onClick="onZeroClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="30sp"
                android:background="@drawable/button_operator"
                android:text="@string/dot"
                android:onClick="onDotClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeTextType="uniform"
				android:autoSizeMaxTextSize="30sp"
                android:background="@drawable/button_operator"
                android:text="@string/equal"
                android:onClick="onEqualClick"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>